eks/eks-kode-kloud/network-policies-demo/allow-app1.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: allow-app1
spect: 
  podSelector:
    matchLabels:
      app: "1" 
  policyTypes:
    - Ingress
    - Egress 
  ingress:
    -from:
      - podSelector:
          matchLabels:
            app: "2"
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: "2"
    - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    - ports:
      - port: 53
        protocol: UDP
